...
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorForNumber2">
                <TextView
                    android:id="@+id/currentResult"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textSize="22sp"
                    android:textStyle="bold|italic"
                    android:textColor="@color/colorRealNumber" />
            </TableRow>

        </TableLayout>

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="80"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout"
...
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/n2"
                    android:layout_weight="9"
                    android:contentDescription="@string/number_two"/>

                <ImageButton
                    android:id="@+id/forSign2"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:background="@drawable/exemptycell"
                    android:layout_weight="13"
                    android:contentDescription="@string/cell_sign"/>
...
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/n3"
                    android:layout_weight="9"
                    android:contentDescription="@string/number_three"/>

                <ImageButton
                    android:id="@+id/forSign3"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:background="@drawable/exemptycell"
                    android:layout_weight="13"
                    android:contentDescription="@string/cell_sign"/>
...
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="20"
                android:layout_marginBottom="12dp">

                <ImageButton
                    android:id="@+id/plusButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:background="@drawable/explus"
                    android:layout_marginRight="30dp"
                    android:layout_marginEnd="30dp"
                    android:contentDescription="@string/plus_button"/>

                <ImageButton
                    android:id="@+id/multiplyButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:background="@drawable/exmultiply"
                    android:contentDescription="@string/multiply_button"/>
...
