...
    <string name="onAI">AI: ON</string>
    <string name="offAI">AI: OFF</string>
    <string name="namespace">Name: %1$s</string>
    <string name="buyspace">Buy: %1$d</string>
    <string name="sellspace">Sell: %1$d</string>
    <string name="chargespace">Charge: %1$d</string>
    <string name="buttonPlay">Play</string>
    <string name="buttonExit">Exit</string>
    <string name="buttonEnter">Enter</string>
    <string name="buttonStart">Start</string>
    <string name="buttonDelete">Delete</string>
    <string name="playerNameHint">BestEverPlayer:</string>
    <string name="playersTitle">Players:</string>
...
