<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_menu_home"
        android:title="@string/text_home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_puzzles"
        android:enabled="true"
        android:icon="@drawable/ic_menu_puzzles"
        android:title="@string/text_puzzles"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_words"
        android:enabled="true"
        android:icon="@drawable/ic_menu_words"
        android:title="@string/text_words"
        app:showAsAction="ifRoom" />
</menu>