<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:tag="FRAGMENT_PUZZLES"
    android:id="@+id/fragment_puzzles">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Puzzles"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textSize="30sp"
        />
</RelativeLayout>